--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -27,3 +27,8 @@ jobs:
     - run: npm ci
     - run: npm run build --if-present
     - run: npm run deploy
+    env:
+    - CI: true
+    - ZEIT_TOKEN: ${{ secrets.ZEIT_TOKEN }} 
+      
+      
