--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -28,6 +28,5 @@ jobs:
     - run: npm run build --if-present
     - run: npm run deploy
     env:
-    - ZEIT_TOKEN: ${{ secrets.ZEIT_TOKEN }} 
-      
-      
+      CI: true
+      ZEIT_TOKEN: ${{ secrets.TOKEN }} 
