--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -30,4 +30,4 @@ jobs:
     - run: npm run deploy
     env:
       CI: true
-      ZEIT_TOKEN: ${{ secrets.TOKEN }} 
+      TOKEN: ${{ secrets.TOKEN }} 
