--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -26,7 +26,9 @@ jobs:
         node-version: ${{ matrix.node-version }}
     - run: npm ci
     - run: npm run build --if-present
-    - run: npm install
+    - run: echo 1:$ORG_ID
+    - run: echo 2:$PROJECT_ID
+    - run: echo 3:$TOKEN
     - run: npm run deploy
     env:
       CI: true
